--- a/crowdsource-ui/src/views/modules/dekhoIndia/profanity/profanity.ejs
+++ b/crowdsource-ui/src/views/modules/dekhoIndia/profanity/profanity.ejs
@@ -16,19 +16,19 @@
     <link rel="stylesheet" type="text/css" href="../../css/record.css">
     <link rel="stylesheet" type="text/css" href="../../css/common.css">
     <link rel="stylesheet" type="text/css" href="../../css/mic-speaker-testing.css">
+    <link rel="stylesheet" type="text/css" href="../../css/dekhoIndia/profanity.css">
     <style>.btn.focus,.btn:focus{outline:0;box-shadow:0 0}</style>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
-<%- include('../common/headerWithoutNavBar.ejs',{path:"../",MODULE:"Dekho India", PAGE_TITLE:"Label"}) %>
+<%- include('../common/headerWithoutNavBar.ejs',{path:"../",MODULE:"Dekho India", PAGE_TITLE:""}) %>
 <%- include('./profanity-thank-you.ejs',{type:"dekhoindia"}) %>
 <div id="validator-page-content">
     <div class="container-fluid">
         <div id="content-wrapper" class="d-flex flex-column position-relative">
-            
+
             <div class="modal-footer pt-3 position-relative" style="height:72px">
-                <%- include ../common/report-btn.ejs %>
             </div>
             <div class="row justify-content-around mx-3 mx-lg-0 mx-xl-5 mb-2 align-items-center">
                 <%- include ../common/speakerTesting.ejs %>
@@ -39,13 +39,7 @@
                     <span id="expand-view" class="position-absolute text-muted" style="cursor:pointer;right:16px;font-size:14px;margin-top:5px"> <%= __('Click to open expanded view') %></span>
                 </div>
             </div>
-            <div class="row justify-content-center d-none" id="thankyou-text">
-                <div class="col-12 text-center mt-4">
-                    <img src="../../img/tick.svg">
-                    <label class="text-primary ml-2" style="font-size:28px;vertical-align:middle">Thank you for
-                        contributing!</label>
-                </div>
-            </div>
+
             <div class="row justify-content-center mb-5 mb-lg-0 mt-lg-5 d-none" id="no-sentences-row">
                 <div class="col-md-8 col-sm-10 text-center"><label class="h1 font-weight-bold">
                         <%= __('Thank you for contributing.') %>
@@ -55,7 +49,7 @@
                     </p>
                     <div class="row justify-content-center mt-5">
                         <div class="col-lg-3 col-md-6 col-8 text-center lead" id="start_contributing_id">
-                            <a class="btn btn-primary text-white btn-lg h6 w-100" href="./home.html">
+                            <a class="btn btn-primary text-white btn-lg h6 w-100" href="#">
                                 <%- __('Back to dekho India Home') %>
                             </a></div>
                     </div>
@@ -78,32 +72,43 @@
                 </div>
             </div>
 
-            <div class="row mt-5 justify-content-center mx-0" id="validation-button-row">
-                <button class="btn align-self-start mb-2" id="cancel-edit-button">
-                    <svg width="208" height="66" viewBox="0 0 208 66" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M1 33C1 15.3269 15.3269 1 33 1H175C192.673 1 207 15.3269 207 33C207 50.6731 192.673 65 175 65H33C15.3269 65 1 50.6731 1 33Z" fill="white" stroke="#007BFF" stroke-width="2"/>
-                        <text x="43" y="43" font-family="lato" font-size="24" fill="#343A40" style="text-align:center">Not Profane</text>
-                    </svg>
-                </button>
-                <button class="btn web-view"></button>
-                <button class="btn align-self-start mb-2 pl-4" id="submit-edit-button">
-                    <svg width="208" height="66" viewBox="0 0 208 66" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M1 33C1 15.3269 15.3269 1 33 1H175C192.673 1 207 15.3269 207 33C207 50.6731 192.673 65 175 65H33C15.3269 65 1 50.6731 1 33Z" fill="white" stroke="#007BFF" stroke-width="2"/>
-                        <text x="65" y="43" font-family="lato" font-size="24" fill="#343A40" style="text-align:center">
-                            Profane
-                        </text>
-                    </svg>
+            <div class="row m-0" style="height:150px"></div>
+            <div id="controls-row" style="">
+                <div class="row justify-content-center d-none mt-5 mx-0" id="thankyou-text">
+                    <div class="col-12 text-center mt-4">
+                        <img src="../../img/tick.svg">
+                        <label class="text-primary ml-2" style="font-size:28px;vertical-align:middle">Thank you for
+                            contributing!</label>
+                    </div>
+                </div>
+                <div class="row mt-5 justify-content-center mx-0" id="validation-button-row">
+                    <button class="btn align-self-start mb-2" id="cancel-edit-button">
+                        <svg width="208" height="66" viewBox="0 0 208 66" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M1 33C1 15.3269 15.3269 1 33 1H175C192.673 1 207 15.3269 207 33C207 50.6731 192.673 65 175 65H33C15.3269 65 1 50.6731 1 33Z" fill="white" stroke="#007BFF" stroke-width="2"/>
+                            <text x="43" y="43" font-family="lato" font-size="24" fill="#343A40" style="text-align:center">Not Profane
+                            </text>
+                        </svg>
+                    </button>
+                    <button class="btn web-view"></button>
+                    <button class="btn align-self-start mb-2 pl-4" id="submit-edit-button">
+                        <svg width="208" height="66" viewBox="0 0 208 66" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M1 33C1 15.3269 15.3269 1 33 1H175C192.673 1 207 15.3269 207 33C207 50.6731 192.673 65 175 65H33C15.3269 65 1 50.6731 1 33Z" fill="white" stroke="#007BFF" stroke-width="2"/>
+                            <text x="65" y="43" font-family="lato" font-size="24" fill="#343A40" style="text-align:center">
+                                Profane
+                            </text>
+                        </svg>
 
-                </button>
+                    </button>
+                </div>
+                <div class="row justify-content-center" id="skip_btn_row">
+                    <button class="btn text-primary mt-2 mb-2 fs-1_5-rem" id="skip_button">
+                        <%= __('Skip') %>
+                    </button>
+                </div>
             </div>
 
-            <div class="row justify-content-center" id="skip_btn_row">
-                <button class="btn text-primary mt-2 mb-2 fs-1_5-rem" id="skip_button">
-                    <%= __('Skip') %>
-                </button>
-            </div>
             <div class="row justify-content-center mb-3 mt-lg-5 mt-md-5 mt-sm-1" id="progress-row">
-                <div class="col-12 col-sm-8 col-lg-7">
+                <div class="col-12 col-sm-8 col-lg-6">
                     <div class="progress mt-1">
                         <div class="progress-bar progress-bar-striped progress-bar-animated" id="progress_bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="10" style="width:.5%"></div>
                     </div>
@@ -125,8 +130,6 @@
         </div>
 
         <script>var modal=document.getElementById("myModal"),clickExpandBtn=document.getElementById("expand-view"),img=document.getElementById("view-image"),modalImg=document.getElementById("img01"),captionText=document.getElementById("caption");clickExpandBtn.onclick=function(){modal.style.display="block",modalImg.src=img.src};var span=document.getElementsByClassName("close")[0];span.onclick=function(){modal.style.display="none"}</script>
-
-        <%- include('../common/report.ejs',{reportPara: "Help us understand what’s wrong with the image labelled", "REPORT":[{h1:"Offensive",p1:"Hateful / Discriminatory / Vulgar language, drugs promotion etc."}]}); %>
         <script src="https://cdn.jsdelivr.net/gh/mattdiamond/Recorderjs@08e7abd99739be6946f19f6806ccb368138f2dd3/dist/recorder.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/notyf@3.7.0/notyf.min.js" integrity="sha256-22tRfnWCd6VIZ8O39ATlPY3pctqfFp9tFsyl4swl+VQ=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
