--- a/crowdsource-ui/src/views/modules/likhoIndia/profanity/profanity.ejs
+++ b/crowdsource-ui/src/views/modules/likhoIndia/profanity/profanity.ejs
@@ -16,12 +16,13 @@
     <link rel="stylesheet" type="text/css" href="../../css/record.css">
     <link rel="stylesheet" type="text/css" href="../../css/common.css">
     <link rel="stylesheet" type="text/css" href="../../css/mic-speaker-testing.css">
+    <link rel="stylesheet" type="text/css" href="../../css/dekhoIndia/profanity.css">
     <style>.btn.focus,.btn:focus{outline:0;box-shadow:0 0}</style>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
-<%- include('../common/headerWithoutNavBar.ejs',{path:"../",MODULE:"Likho India", PAGE_TITLE:"Translate"}) %>
+<%- include('../common/headerWithoutNavBar.ejs',{path:"../",MODULE:"Likho India", PAGE_TITLE:""}) %>
 <%- include('./profanity-thank-you.ejs',{type:"likhoindia"}) %>
 <div id="validator-page-content">
     <div class="container-fluid">
@@ -29,24 +30,18 @@
             
          
             <div class="modal-footer pt-3 position-relative" style="height:72px">
-                <%- include ../common/report-btn.ejs %>
             </div>
             <div class="row justify-content-around mx-3 mx-lg-0 mx-xl-5 mb-2 align-items-center">
                 <%- include ../common/speakerTesting.ejs %>
             </div>
             
             <div class="row justify-content-center mb-5 mb-lg-0 mt-5 mx-1" id="editor-row">
-                <div class="col-lg-4 col-md-5 col-12 original-text">
+                <div class="col-lg-4 col-md-5 col-12 original-text" style="border-radius:12px!important">
                     <label id="from-label"><%- __('ENGLISH')%></label>
                     <div id="captured-text"></div>
                 </div>
             </div>
-            <div class="row justify-content-center d-none" id="thankyou-text">
-                <div class="col-12 text-center mt-4">
-                    <img src="../../img/tick.svg">
-                    <label class="text-primary ml-2" style="font-size:28px;vertical-align:middle">Thank you for contributing!</label>
-                </div>
-            </div>
+
             <div class="row justify-content-center mb-5 mb-lg-0 mt-lg-5 d-none" id="no-sentences-row">
                 <div class="col-md-8 col-sm-10 text-center"><label class="h1 font-weight-bold">
                         <%= __('Thank you for contributing.') %>
@@ -56,7 +51,7 @@
                     </p>
                     <div class="row justify-content-center mt-5">
                         <div class="col-lg-3 col-md-6 col-8 text-center lead" id="start_contributing_id">
-                            <a class="btn btn-primary text-white btn-lg h6 w-100" href="./home.html">
+                            <a class="btn btn-primary text-white btn-lg h6 w-100" href="#">
                                 <%- __('Back to Likho India Home') %>
                             </a></div>
                     </div>
@@ -76,6 +71,16 @@
                         </a>
                         <div class="col-lg-4 col-md-4 col-sm-10 oflow-x-hid"></div>
                     </div>
+                </div>
+            </div>
+
+            <div class="row m-0" style="height:150px"></div>
+            <div id="controls-row" style="">
+
+            <div class="row justify-content-center d-none mt-5" id="thankyou-text">
+                <div class="col-12 text-center mt-4">
+                    <img src="../../img/tick.svg">
+                    <label class="text-primary ml-2" style="font-size:28px;vertical-align:middle">Thank you for contributing!</label>
                 </div>
             </div>
 
@@ -103,8 +108,9 @@
                     <%= __('Skip') %>
                 </button>
             </div>
+            </div>
             <div class="row justify-content-center mb-3 mt-lg-5 mt-md-5 mt-sm-1" id="progress-row">
-                <div class="col-12 col-sm-8 col-lg-7">
+                <div class="col-12 col-sm-8 col-lg-6">
                     <div class="progress mt-1">
                         <div class="progress-bar progress-bar-striped progress-bar-animated" id="progress_bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="10" style="width:.5%"></div>
                     </div>
@@ -114,7 +120,6 @@
                 </div>
             </div>
         </div>
-        <%- include('../common/report.ejs',{reportPara: "Help us understand what’s wrong with the sentence", "REPORT":[{h1:"Offensive",p1:"Hateful / Discriminatory / Vulgar language, drugs promotion etc."}]}); %>
         <script src="https://cdn.jsdelivr.net/gh/mattdiamond/Recorderjs@08e7abd99739be6946f19f6806ccb368138f2dd3/dist/recorder.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/notyf@3.7.0/notyf.min.js" integrity="sha256-22tRfnWCd6VIZ8O39ATlPY3pctqfFp9tFsyl4swl+VQ=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
