--- a/crowdsource-ui/src/views/modules/sunoIndia/profanity/profanity-thank-you.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/profanity/profanity-thank-you.ejs
@@ -11,7 +11,7 @@
                     
                 </div>
                 <div class="row justify-content-center mt-4">
-                    <div class="col-12" data-toggle="tooltip">
+                    <div class="col-12 col-lg-6" data-toggle="tooltip">
                         <a href="/en/<%= type %>/profanity.html" class="btn btn-primary h6 shadow w-100 rounded p-2">
                             <%= __('Contribute More') %>
                         </a></div>
