--- a/crowdsource-ui/src/views/profanity-boloindia.ejs
+++ b/crowdsource-ui/src/views/profanity-boloindia.ejs
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head><title>Bolo India: A crowdsourcing initiative for Indian languages</title>
+
+<head>
+    <title>Bolo India: A crowdsourcing initiative for Indian languages</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-169921734-1"></script>
@@ -12,102 +14,69 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/notyf@3.7.0/notyf.min.css" integrity="sha256-1T9PQaTbbUusCVH72ahoGVZ1axGmU5uAOgSb4/GNXj8=" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../css/record.css">
     <link rel="stylesheet" type="text/css" href="../css/common.css">
+    <style>.btn.focus,.btn:focus{outline:0;box-shadow:0 0}</style>
 </head>
-<body> <%- include('common/headerForContributor.ejs',{path:"./"}); %>
-    <%- include('modals/profanity-thank-you.ejs',{type:"boloindia"}); %>
-<div id="loader" class="overlay__content"><span class="spinner"></span></div>
-<div id="page-content" class="d-none">
-    <div id="content-wrapper" class="container-fluid d-flex flex-column">
-        <%- include modals/recording-instructions.ejs %>
-        <div class="d-flex justify-content-end pt-3 record-btn-container">
-            <%- include components/report-btn.ejs %>
-            <%- include components/mic-speaker-test-btn.ejs %>
-        </div>
-        <%- include modals/mic-speaker-testing.ejs %>
-        <div class="xs-p-16">
-            <div class="row justify-content-center my-5">
-                <div class="col-md-8 col-sm-10 text-center prompt"><label class="h1 font-weight-normal" id="sentenceLbl"></label></div>
-            </div>
-            <div class="row mt-5">
-                <div class="col-7 col-sm-8 offset-2 offset-lg-3 col-lg-6 col-xl-4 offset-xl-4">
-                    <div class="progress mt-1">
-                        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="10" style="width:.5%"></div>
-                    </div>
-                </div>
-                <div class="col-3 col-sm-2"><span class="" id="currentSentenceLbl"></span> <span class="">/</span> <span class="" id="totalSentencesLbl"></span></div>
-            </div>
-            <div class="recording-container">
-                <div class="row justify-content-center d-none">
-                    <div class="col-8 text-muted h-1r" id="get-started"> <%= __('Let\'s get started!') %> </div>
-                </div>
 
-                <div class="row justify-content-center d-none" id="recording-row">
-                    <div class="col-md-1 col-2 my-auto">
-                        <div id="recording-sign" class="recorder-container ml-auto align-middle d-none">
-                            <div class="outer"></div>
-                            <div class="outer-2"></div>
-                            <div class="icon-microphone"><i class="material-icons md-48">mic</i></div>
+<body>
+    <%- include('common/header/headerWithoutNavBar.ejs',{path:"./", MODULE:"Bolo India", PAGE_TITLE:""}); %>
+    <%- include('common/modals/profanity-thank-you/profanity-thank-you.ejs',{type:'boloindia'}); %>
+        <div id="loader" class="overlay__content"><span class="spinner"></span></div>
+        <div id="page-content" class="d-none">
+            <div class="container-fluid">
+            <div id="content-wrapper" class="container-fluid d-flex flex-column">
+                    <div class="modal-footer pt-3 position-relative" style="height:72px">
+                        <div class="row position-absolute top-back-btn">
+                            <%- include('common/buttons/back-btn/back-btn.ejs',{url:"/profanity/boloindia"}) %>
                         </div>
                     </div>
-                    <div class="col-lg-7 col-8 text-center">
-                        <canvas id="visualizer"></canvas>
+                    <div class="row mt-5">
                     </div>
-                </div>
-                <div class="row justify-content-center d-none count-down" id="count-down"><span class="align-middle" id="cont-down-span"> <%- __('Recording will automatically stop after <span id="counter"></span> seconds') %> </span>
-                </div>
-                <div class="row justify-content-center">
-                    <div class="col-lg-4 col-md-6 col-sm-8 col-12 text-center my-5">
-                        <audio class="d-none" id="player" controls tabindex="-1"></audio>
-                        <div class="text-danger mt-2 d-none" id="audio-small-error"><i class="material-icons align-middle">error</i>
-                            <span class="align-middle"> <%= __('Audio recording is too small. Please Re-record') %> </span>
+                    <div class="xs-p-16">
+                        <div class="row justify-content-center my-5">
+                            <div class="col-md-8 col-sm-10 text-center prompt"><label class="h1 font-weight-normal" id="sentenceLbl"></label></div>
+                        </div>
+                        <div class="row justify-content-center align-items-center mb-5 mt-lg-5" id="startRecordRow">
+                            <div class="col-xl-2 col-md-2 col-sm-12 col-xs-12 col-6 col-lg-2 pr-5">
+                                <button type="button" class="btn btn-outline-primary text-primary w-100 p-3" id="startRecord" style="border-radius:50px;font-size:24px;border:2px solid #007bff">
+                                    Not Profane </button>
+                            </div>
+                            <div class="col-xl-2 col-md-2 col-sm-12 col-xs-12 col-6 col-lg-2 pl-5">
+                                <button id="nextBtn" class="btn btn-outline-primary text-primary w-100 p-3" style="border-radius:50px;font-size:24px;border:2px solid #007bff"> Profane </button>
+                            </div>
+                        </div>
+                        <div class="row justify-content-center align-items-center">
+                            <div>
+                                <button type="button" tabindex="-1" id="skipBtn" class="btn text-primary mb-2 w-100 px-3 py-2" style="font-size:24px">
+                                    <%= __('Skip') %>
+                                </button>
+                            </div>
+                        </div>
+                        <div class="row justify-content-center mb-3 mt-lg-5 mt-md-5 mt-sm-1" id="progress-row">
+                            <div class="col-12 col-sm-8 col-lg-7">
+                                <div class="progress mt-1">
+                                    <div class="progress-bar progress-bar-striped progress-bar-animated" id="progress_bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="10" style="width:.5%"></div>
+                                </div>
+                                <div class="mt-4 text-muted h-1r d-none" id="get-started">
+                                    <%= __('Let\'s get started!') %>
+                                </div>
+                            </div>
+                            <div class="px-3">
+                                <div class="row justify-content-center">
+                                    <span class="" id="currentSentenceLbl"></span><span class="">/</span><span class="" id="totalSentencesLbl"></span>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </div>
-            <div class="row justify-content-center align-items-center" id="startRecordRow">
-                <div class="col-xl-3 col-md-3 col-sm-4 col-6 col-lg-3">
-                    <button type="button" tabindex="-1" id="skipBtn" class="btn btn-outline-primary h6 w-100 rounded p-3"> <%= __('SKIP') %> </button>
-                </div>
-                <div class="col-xl-3 col-md-3 col-sm-4 col-6 col-lg-3">
-                    <button type="button" class="btn btn-primary shadow h6 w-100 rounded p-3" id="startRecord"> <%= __('START RECORDING') %> </button>
-                    <button type="button" id="stopRecord" class="d-none btn btn-primary shadow h6 w-100 rounded p-3"> <%= __('STOP RECORDING') %> </button>
-                </div>
-            </div>
-            <div class="row justify-content-center align-items-center">
-                <div class="col-xl-3 col-md-3 col-sm-4 col-6 col-lg-3">
-                    <button type="button" id="reRecord" class="d-none btn btn-outline-primary h6 w-100 rounded p-3"> <%= __('RE-RECORD') %> </button>
-                </div>
-                <div class="col-xl-3 col-md-3 col-sm-4 col-6 col-lg-3">
-                    <div class="outline-0" tabindex="0" data-toggle="tooltip" title="<%= __('Please validate any error message before proceeding')%>">
-                        <button id="nextBtn" class="d-none btn btn-primary shadow h6 w-100 rounded p-3 point-none"> <%= __('NEXT') %> </button>
-                    </div>
-                </div>
             </div>
         </div>
-    </div>
-</div>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<%- include('common/footer.ejs',{path:"./"}) %>
-<%- include modals/report-modal.ejs %>
-<div class="modal fade" id="errorModal" tabindex="-1" role="dialog" aria-labelledby="errorModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header text-danger"><h5 class="modal-title h2" id="errorModalLabel"><span class="material-icons md-48 align-middle">error </span> <%= __('Error!!!') %> </h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body"> <%= __('An unexpected error occured while processing your request. Please try after some time.') %> </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal"> <%= __('Close') %> </button>
-            </div>
         </div>
-    </div>
-</div>
-<script src="https://cdn.jsdelivr.net/npm/notyf@3.7.0/notyf.min.js" integrity="sha256-22tRfnWCd6VIZ8O39ATlPY3pctqfFp9tFsyl4swl+VQ=" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/notyf@3.7.0/notyf.min.js" integrity="sha256-22tRfnWCd6VIZ8O39ATlPY3pctqfFp9tFsyl4swl+VQ=" crossorigin="anonymous"></script>
 
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<script src="../js/profanity-boloindia.js"></script>
-<script src="../js/mic-speaker-testing.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <script src="../js/profanity-boloindia.js"></script>
+        <script src="../js/mic-speaker-testing.js"></script>
 </body>
+
 </html>
