|Niresh| workaround for /profanity/ link access

--- a/crowdsource-ui/src/views/modules/dekhoIndia/profanity/profanity.ejs
+++ b/crowdsource-ui/src/views/modules/dekhoIndia/profanity/profanity.ejs
@@ -30,7 +30,7 @@
 
             <div class="modal-footer pt-3 position-relative" style="height:72px">
                 <div class="row position-absolute top-back-btn">
-                    <%- include('../common/back-btn.ejs',{url:"/profanity/dekhoindia"}) %>
+                    <%- include('../common/back-btn.ejs',{url:"/en/profanity-home.html?type=dekhoindia"}) %>
                 </div>
             </div>
             <div class="row justify-content-around mx-3 mx-lg-0 mx-xl-5 mb-2 align-items-center">
@@ -52,7 +52,7 @@
                     </p>
                     <div class="row justify-content-center mt-5">
                         <div class="col-lg-3 col-md-6 col-8 text-center lead" id="start_contributing_id">
-                            <a class="btn btn-primary text-white btn-lg h6 w-100" href="/profanity/dekhoindia">
+                            <a class="btn btn-primary text-white btn-lg h6 w-100" href="/en/profanity-home.html?type=dekhoindia">
                                 <%- __('Back to dekho India Home') %>
                             </a></div>
                     </div>
