--- a/crowdsource-ui/src/views/modules/sunoIndia/profanity/profanity.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/profanity/profanity.ejs
@@ -30,7 +30,7 @@
             <%- include ../common/recording-instructions.ejs %>
             <div class="modal-footer pt-3 record-btn-container position-relative" style="height:72px">
                 <div class="row position-absolute top-back-btn">
-                    <%- include('../common/back-btn.ejs',{url:"/profanity/sunoindia"}) %>
+                    <%- include('../common/back-btn.ejs',{url:"/en/profanity-home.html?type=sunoindia"}) %>
                 </div>
                 <%- include ../common/speakerTestBtn.ejs %>
             </div>
@@ -53,7 +53,7 @@
                     </p>
                     <div class="row justify-content-center mt-5">
                         <div class="col-lg-3 col-md-6 col-8 text-center lead" id="start_contributing_id">
-                            <a class="btn btn-primary text-white btn-lg h6 w-100" href="/profanity/sunoindia">
+                            <a class="btn btn-primary text-white btn-lg h6 w-100" href="/en/profanity-home.html?type=sunoindia">
                                 <%- __('Back to Suno India Home') %>
                             </a></div>
                     </div>
