--- a/crowdsource-ui/src/views/modules/likhoIndia/profanity/profanity.ejs
+++ b/crowdsource-ui/src/views/modules/likhoIndia/profanity/profanity.ejs
@@ -31,7 +31,7 @@
          
             <div class="modal-footer pt-3 position-relative" style="height:72px">
                 <div class="row position-absolute top-back-btn">
-                    <%- include('../common/back-btn.ejs',{url:"/profanity/likhoindia"}) %>
+                    <%- include('../common/back-btn.ejs',{url:"/en/profanity-home.html?type=likhoindia"}) %>
                 </div>
             </div>
             <div class="row justify-content-around mx-3 mx-lg-0 mx-xl-5 mb-2 align-items-center">
@@ -54,7 +54,7 @@
                     </p>
                     <div class="row justify-content-center mt-5">
                         <div class="col-lg-3 col-md-6 col-8 text-center lead" id="start_contributing_id">
-                            <a class="btn btn-primary text-white btn-lg h6 w-100" href="/profanity/likhoindia">
+                            <a class="btn btn-primary text-white btn-lg h6 w-100" href="/en/profanity-home.html?type=likhoindia">
                                 <%- __('Back to Likho India Home') %>
                             </a></div>
                     </div>
