--- a/crowdsource-ui/src/views/profanity-boloindia.ejs
+++ b/crowdsource-ui/src/views/profanity-boloindia.ejs
@@ -26,7 +26,7 @@
             <div id="content-wrapper" class="container-fluid d-flex flex-column">
                     <div class="modal-footer pt-3 position-relative" style="height:72px">
                         <div class="row position-absolute top-back-btn">
-                            <%- include('common/buttons/back-btn/back-btn.ejs',{url:"/profanity/boloindia"}) %>
+                            <%- include('common/buttons/back-btn/back-btn.ejs',{url:"/en/profanity-home.html?type=boloindia"}) %>
                         </div>
                     </div>
                     <div class="row mt-5">
