| Priyanshu + Ayush | fix Dashboard width for bolo, suno, dekho and likho

--- a/crowdsource-ui/src/views/modules/dekhoIndia/dashboard/dashboard.ejs
+++ b/crowdsource-ui/src/views/modules/dekhoIndia/dashboard/dashboard.ejs
@@ -59,7 +59,7 @@
                 <div><span class="spinner"></span></div>
             </div>
             <div class="row text-center contribution-details d-none" id="contribution-details">
-                <%- include('../common/contributionStats.ejs',{labels :['Languages','People participated','Images labelled','Text validated']})%>
+                <%- include('../common/contributionStats.ejs',{labels :['Languages','People participated','Images labelled','Images validated']})%>
             </div>
         </div>
     </div>
