|Niresh| bug fixes on url type

--- a/crowdsource-ui/src/views/modules/dekhoIndia/profanity/profanity.ejs
+++ b/crowdsource-ui/src/views/modules/dekhoIndia/profanity/profanity.ejs
@@ -23,7 +23,7 @@
 
 <body>
 <%- include('../common/headerWithoutNavBar.ejs',{path:"../",MODULE:"Dekho India", PAGE_TITLE:""}) %>
-<%- include('./profanity-thank-you.ejs',{type:"dekhoindia"}) %>
+<%- include('./profanity-thank-you.ejs',{type:"dekhoIndia"}) %>
 <div id="validator-page-content">
     <div class="container-fluid">
         <div id="content-wrapper" class="d-flex flex-column position-relative">
