--- a/crowdsource-ui/src/views/profanity-boloindia.ejs
+++ b/crowdsource-ui/src/views/profanity-boloindia.ejs
@@ -19,7 +19,7 @@
 
 <body>
     <%- include('common/header/headerWithoutNavBar.ejs',{path:"./", MODULE:"Bolo India", PAGE_TITLE:""}); %>
-    <%- include('common/modals/profanity-thank-you/profanity-thank-you.ejs',{type:'boloindia'}); %>
+    <%- include('common/modals/profanity-thank-you/profanity-thank-you.ejs',{type:'boloIndia'}); %>
         <div id="loader" class="overlay__content"><span class="spinner"></span></div>
         <div id="page-content" class="d-none">
             <div class="container-fluid">
