--- a/crowdsource-ui/src/views/modules/likhoIndia/profanity/profanity.ejs
+++ b/crowdsource-ui/src/views/modules/likhoIndia/profanity/profanity.ejs
@@ -23,7 +23,7 @@
 
 <body>
 <%- include('../common/headerWithoutNavBar.ejs',{path:"../",MODULE:"Likho India", PAGE_TITLE:""}) %>
-<%- include('./profanity-thank-you.ejs',{type:"likhoindia"}) %>
+<%- include('./profanity-thank-you.ejs',{type:"likhoIndia"}) %>
 <div id="validator-page-content">
     <div class="container-fluid">
         <div id="content-wrapper" class="d-flex flex-column position-relative">
