Akshit | Feedback modal color opinion emoji

--- a/crowdsource-ui/src/views/common/feedback/feedback.ejs
+++ b/crowdsource-ui/src/views/common/feedback/feedback.ejs
@@ -20,7 +20,7 @@
             </div>
             <div class="border-top"></div>
             <div class="modal-body" style="padding:20px 34px 45px 32px">
-                <div class="mb-4">
+                <div class="mb-3">
                     <label class="form-check-label label-color-feedback">
                         <%= __('Giving Feedback for?') %> <span class="required">(*required)</span>
                     </label>
@@ -28,20 +28,20 @@
                 <div class="mb-4">
                     <div class="form-row">
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" name="feedbackRadio" id="bolo_id" value="bolo">
+                            <input class="form-check-input" type="radio" name="moduleSelectRadio" id="bolo_id" value="bolo">
                             <label class="form-check-label xs-radio-label" for="bolo_id">
                                 <%= __('Bolo') %>
                             </label>
                         </div>
     
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" name="feedbackRadio" id="suno_id" value="suno">
+                            <input class="form-check-input" type="radio" name="moduleSelectRadio" id="suno_id" value="suno">
                             <label class="form-check-label xs-radio-label" for="suno_id">
                                 <%= __('Suno') %>
                             </label>
                         </div>
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" name="feedbackRadio" id="likho_id" value="likho">
+                            <input class="form-check-input" type="radio" name="moduleSelectRadio" id="likho_id" value="likho">
                             <label class="form-check-label xs-radio-label" for="likho_id">
                                 <%= __('Likho') %>
                             </label>
@@ -51,20 +51,20 @@
                 <div class="mb-4">   
                     <div class="form-row">
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" name="feedbackRadio" id="dekho_id" value="dekho">
+                            <input class="form-check-input" type="radio" name="moduleSelectRadio" id="dekho_id" value="dekho">
                             <label class="form-check-label xs-radio-label" for="dekho_id">
                                 <%= __('Dekho') %>
                             </label>
                         </div>
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" name="feedbackRadio" id="others_id" value="others">
+                            <input class="form-check-input" type="radio" name="moduleSelectRadio" id="others_id" value="others">
                             <label class="form-check-label xs-radio-label" for="others_id">
                                 <%= __('Others')%>
                             </label>
                         </div>
                     </div>
                 </div>
-                <div class="mb-4">
+                <div class="mb-3">
                     <label class="form-check-label label-color-feedback" for="select_page_id">
                         <%= __('Select page') %> <span class="required">(*required)</span>
                     </label>
@@ -86,8 +86,8 @@
                 <div class="mb-4 mt-4">
                     <div class="form-row opinion">
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input very_sad" type="radio" name="radio-opinion" id="very_sad_id" value="very_sad">
-                            <label class="form-check-label xs-radio-label opinion-label" for="very_sad_id">
+                            <input class="form-check-input very_sad" type="radio" name="opinionRadio" id="very_sad_id" value="very_sad">
+                            <label class="form-check-label xs-radio-label opinion-label" id="very_sad_label" for="very_sad_id">
                                 <svg width="52" height="52" class="very_sad-svg" viewBox="0 0 52 52" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M25.9987 47.6693C37.9649 47.6693 47.6654 37.9688 47.6654 26.0026C47.6654 14.0364 37.9649 4.33594 25.9987 4.33594C14.0325 4.33594 4.33203 14.0364 4.33203 26.0026C4.33203 37.9688 14.0325 47.6693 25.9987 47.6693Z" stroke="#959595" stroke-width="2" stroke-linecap="round"/>
                                     <path d="M17.332 19.6112V19.3945" stroke="#959595" stroke-width="2" stroke-linecap="round"/>
@@ -98,8 +98,8 @@
                         </div>
 
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input sad" type="radio" name="radio-opinion" id="sad_id" value="sad">
-                            <label class="form-check-label xs-radio-label opinion-label" for="sad_id">
+                            <input class="form-check-input sad" type="radio" name="opinionRadio" id="sad_id" value="sad">
+                            <label class="form-check-label xs-radio-label opinion-label" id="sad_label" for="sad_id">
                                 <svg width="52" height="52" class="sad-svg" viewBox="0 0 52 52" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M25.9987 47.6693C37.9649 47.6693 47.6654 37.9688 47.6654 26.0026C47.6654 14.0364 37.9649 4.33594 25.9987 4.33594C14.0325 4.33594 4.33203 14.0364 4.33203 26.0026C4.33203 37.9688 14.0325 47.6693 25.9987 47.6693Z" stroke="#959595" stroke-width="2" stroke-linecap="round"/>
                                     <path d="M17.332 19.6112V19.3945" stroke="#959595" stroke-width="2" stroke-linecap="round"/>
@@ -110,8 +110,8 @@
                         </div>
 
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input neutral" type="radio" name="radio-opinion" id="neutral_id" value="neutral">
-                            <label class="form-check-label xs-radio-label opinion-label" for="neutral_id">
+                            <input class="form-check-input neutral" type="radio" name="opinionRadio" id="neutral_id" value="neutral">
+                            <label class="form-check-label xs-radio-label opinion-label" id="neutral_label" for="neutral_id">
                                 <svg width="52" height="52" class="neutral-svg" viewBox="0 0 52 52" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M25.9987 47.6693C37.9649 47.6693 47.6654 37.9688 47.6654 26.0026C47.6654 14.0364 37.9649 4.33594 25.9987 4.33594C14.0325 4.33594 4.33203 14.0364 4.33203 26.0026C4.33203 37.9688 14.0325 47.6693 25.9987 47.6693Z" stroke="#959595" stroke-width="2" stroke-linecap="round"/>
                                     <path d="M17.332 19.6112V19.3945" stroke="#959595" stroke-width="2" stroke-linecap="round"/>
@@ -122,8 +122,8 @@
                         </div>
 
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input happy" type="radio" name="radio-opinion" id="happy_id" value="happy">
-                            <label class="form-check-label xs-radio-label opinion-label" for="happy_id">
+                            <input class="form-check-input happy" type="radio" name="opinionRadio" id="happy_id" value="happy">
+                            <label class="form-check-label xs-radio-label opinion-label" id="happy_label" for="happy_id">
                                 <svg width="52" height="52" class="happy-svg" viewBox="0 0 52 52" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M25.9987 47.6693C37.9649 47.6693 47.6654 37.9688 47.6654 26.0026C47.6654 14.0364 37.9649 4.33594 25.9987 4.33594C14.0325 4.33594 4.33203 14.0364 4.33203 26.0026C4.33203 37.9688 14.0325 47.6693 25.9987 47.6693Z" stroke="#959595" stroke-width="2" stroke-linecap="round"/>
                                     <path d="M17.332 19.6112V19.3945" stroke="#959595" stroke-width="2" stroke-linecap="round"/>
@@ -134,8 +134,8 @@
                         </div>
     
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input very-happy" type="radio" name="radio-opinion" id="very_happy_id" value="very_happy">
-                            <label class="form-check-label xs-radio-label opinion-label" for="very_happy_id">
+                            <input class="form-check-input very-happy" type="radio" name="opinionRadio" id="very_happy_id" value="very_happy">
+                            <label class="form-check-label xs-radio-label opinion-label" id="very_happy_label" for="very_happy_id">
                                 <svg class="very-happy-svg" width="52" height="52" viewBox="0 0 52 52" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M26.0006 47.6654C37.9668 47.6654 47.6673 37.9649 47.6673 25.9987C47.6673 14.0325 37.9668 4.33203 26.0006 4.33203C14.0345 4.33203 4.33398 14.0325 4.33398 25.9987C4.33398 37.9649 14.0345 47.6654 26.0006 47.6654Z" stroke="#959595" stroke-width="2" stroke-linecap="round"/>
                                     <path d="M17.334 19.6073V19.3906" stroke="#959595" stroke-width="2" stroke-linecap="round"/>
