--- a/crowdsource-ui/src/views/modules/dekhoIndia/home/home.ejs
+++ b/crowdsource-ui/src/views/modules/dekhoIndia/home/home.ejs
@@ -76,6 +76,7 @@
 <%- include ../common/content-languages.ejs %>
 <%- include ../common/say-listen-language.ejs %>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<%- include('../common/feedback.ejs') %>
 <%- include('../common/footer.ejs',{path:"../"}) %>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
