--- a/crowdsource-ui/src/views/home.ejs
+++ b/crowdsource-ui/src/views/home.ejs
@@ -141,7 +141,7 @@
                 </h4>
                 <div class="d-flex mb-3">
                     <div class="form-check mr-5"><label class="form-check-label" for="flexRadioDefault1"><input class="form-check-input" type="radio" name="topLanguageChart" id="hours_chart" value="hours" checked="checked">
-                            <%= __('By hours of data contributed') %>
+                            <%= __('By hours of data contributed and validated') %>
                         </label></div>
                     <div class="form-check"><label class="form-check-label" for="flexRadioDefault2"><input class="form-check-input" type="radio" name="topLanguageChart" id="speakers_chart" value="speakers">
                             <%= __('By number of speakers') %>
