--- a/crowdsource-ui/src/views/validator-prompt-page.ejs
+++ b/crowdsource-ui/src/views/validator-prompt-page.ejs
@@ -112,7 +112,9 @@
                         <div class="audioplayer d-flex justify-content-center align-items-center">
                             <img src="../img/play.svg" alt="play" id="play" class="cursor-pointer"> 
                             <img src="../img/pause.svg" alt="pause" id="pause" class="d-none cursor-pointer"> 
-                            <img src="../img/replay.svg" alt="replay" id="replay" class="d-none justify-self-center cursor-pointer"></div>
+                            <img src="../img/replay.svg" alt="replay" id="replay" class="d-none justify-self-center cursor-pointer">
+                            <img src="../img/play.svg" alt="resume" id="resume" class="d-none justify-self-center cursor-pointer">
+                        </div>
                         <h3 class="font-wt-800 text-center mt-2" id="audioplayer-text_play">
                             <%= __('Play') %>
                         </h3>
@@ -121,6 +123,9 @@
                         </h3>
                         <h3 class="font-wt-800 text-center d-none mt-2" id="audioplayer-text_pause">
                             <%= __('Pause') %>
+                        </h3>
+                        <h3 class="font-wt-800 text-center d-none mt-2" id="audioplayer-text_resume">
+                            <%= __('Resume') %>
                         </h3>
                     </div>
                     <button class="btn align-self-start mb-2 w-100" disabled="disabled" id="like_button">
