--- a/crowdsource-ui/src/views/home.ejs
+++ b/crowdsource-ui/src/views/home.ejs
@@ -12,8 +12,8 @@
     <meta property="og:description" content="<%= __('I\'ve contributed towards building open language repository for India on https://boloindia.nplt.in You and I can make a difference by donating our voices that can help machines learn our language and interact with us through great linguistic applications. Do your bit and empower the language?') %>">
     <meta property="og:site_name" content="Bolo India ">
     <meta property="og:url" content="https://boloindia.nplt.in">
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-169921734-1"></script>
-    <script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","UA-169921734-1")</script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-B5X6CXDBNP"></script>
+    <script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","G-B5X6CXDBNP")</script>
     <link rel="preload" as="style" onload='this.onload=null,this.rel="stylesheet"' href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap">
     <link rel="preload" as="style" onload='this.onload=null,this.rel="stylesheet"' href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" async></script>
